Mon, 10 Nov 1997  Jim Kingdon

	* rcs.c (RCS_checkin): Pass correct mode to get_file for
	binary files.

	* rcscmds.c: Declare vasprintf.

Mon Nov 10 11:11:17 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	This fixes problems with windows-NT/run.c improperly quoting, and
	is cleaner anyway.
	* rcscmds.c (call_diff_setup, call_diff_arg, call_diff_add_arg,
	call_diff_argv, call_diff_argc, call_diff_argc_allocated): New
	functions/variables, lightly adapted from src/run.c.
	* cvs.h, run.c (call_diff, call_diff3): Move from here...
	* rcscmds.c: ...to here.

Sun, 9 Nov 1997  Jim Kingdon

	* rcs.c (rcs_internal_unlockfile): Call rename_file not rename.
	This makes it work on NT again.

Sun Nov  9 16:54:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (diffmerge2): Protect keywords against unwanted
	expansion.  They got clobbered and the testcase stopped working
	when I checked it in.

Fri Nov  7 13:23:38 1997  Karl Fogel  <kfogel@floss.red-bean.com>
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (diffmerge1, diffmerge2): new tests, for bugs, or
	potential bugs, in ../diff/analyze.c which were fixed by Paul
	Eggert's patch.

Sun Nov  9 10:28:43 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_settag): Reindent.

	* rcs.c (rcs_internal_lockfile): Fix typo (thow -> throw).

Sat Nov  8 15:58:53 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (cvsadm): Remove most of the tests which tested
	CVS/Root.  This takes the run time for the cvsadm tests from
	about 5 minutes 15 seconds to about 4 minutes 10 seconds with no
	significant loss in coverage.

	* rcs.c (rcs_internal_lockfile): Check for errors from system
	calls.  If open() gives an error, don't muck with stat and errno
	(I don't know what the RCS code that this comes from was trying to
	do, but it clearly isn't accomplishing anything here).
	(RCS_rewrite, RCS_delete_revs): Check for errors from system calls.
